<resources>
    <string name="app_name">Story App</string>
    <string name="welcome">Welcome!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="login">Login</string>
    <string name="questions_on_the_login_form">Don\'t have an account?</string>
    <string name="hi">Hi!</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="register">Register</string>
    <string name="questions_on_the_register_form">Already have an account?</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="error_required_name_message">The name field is required.</string>
    <string name="error_required_email_message">The email field is required.</string>
    <string name="error_format_email_message">The email must be a valid email address.</string>
    <string name="error_required_password_message">The password field is required.</string>
    <string name="error_min_length_password_message">The password must be at least 6 characters.</string>
    <string name="error_required_photo_message">Please select a file.</string>
    <string name="error_required_description_message">The description field is required.</string>
    <string name="successful_registration_message">New account registration successful</string>
    <string name="story_name">John Doe</string>
    <string name="story_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores consequatur consequuntur nam voluptas. Aliquam at culpa cupiditate debitis dicta earum neque non pariatur perferendis, quia. Consequatur dolorum laborum tenetur?</string>
    <string name="logout">Logout</string>
    <string name="error_lottie_message">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="hint_description">Description</string>
    <string name="upload">Upload</string>
    <string name="error_permission_message">Not getting permission</string>
    <string name="error_access_camera">Failed to bring up the camera</string>
    <string name="error_take_picture">Failed to take a picture</string>
    <string name="successful_upload_message">New story added successfully</string>
</resources>